crates/pg_syntax/tests/snapshots/postgres_regress/regproc@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regnamespace('\"pg_catalog\"');"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..22 "to_regnamespace"
      Ascii40@22..23 "("
      AConst@23..37
        Sconst@23..37 "'\"pg_catalog\"'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

