crates/pg_syntax/tests/snapshots/postgres_regress/regproc@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regoperator('++(int4,int4)');"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..18 "regoperator"
      Ascii40@18..19 "("
      AConst@19..34
        Sconst@19..34 "'++(int4,int4)'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

