crates/pg_syntax/tests/snapshots/postgres_regress/regproc@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regproc('know');"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    FuncCall@7..21
      Ident@7..14 "regproc"
      Ascii40@14..15 "("
      AConst@15..21
        Sconst@15..21 "'know'"
  Ascii41@21..22 ")"
  Ascii59@22..23 ";"

