crates/pg_syntax/tests/snapshots/postgres_regress/regproc@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regproc('ng_catalog.now');"
---
SelectStmt@0..33
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..14 "regproc"
      Ascii40@14..15 "("
      AConst@15..31
        Sconst@15..31 "'ng_catalog.now'"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

